--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=pgsql
 DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
