--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,8 @@ services:
     image: postgres:13-alpine
     environment:
       POSTGRES_DB: laravel
-      POSTGRES_USER: root
+      POSTGRES_USER: laravel
+      POSTGRES_PASSWORD: laravel
       POSTGRES_HOST_AUTH_METHOD: trust
 
   redis:
