--- a/.devcontainer/cli/Dockerfile
+++ b/.devcontainer/cli/Dockerfile
@@ -1,7 +1,7 @@
 # From official php image.
 FROM php:8.2-cli-alpine
 # Create a user group and account under id 1000.
-RUN addgroup -g 1000 -S user && adduser -u 1000 -D user -G user
+#RUN addgroup -g 1000 -S user && adduser -u 1000 -D user -G user
 # Install quality-of-life packages.
 RUN apk add --no-cache bash curl git vim
 # Install composer for php deps.
