--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
     "name": "Laravel",
     "service": "cli",
-    "remoteUser": "user",
-    "shutdownAction": "stopCompose",
     "workspaceFolder": "/workspaces/laravel",
     "dockerComposeFile": "docker-compose.yaml",
+    "forwardPorts": [8000],
     "customizations": {
         "vscode": {
             "extensions": [
